	- Fixed #591: Bug - PHP FPM - SSL connection for the panel is not working
	- Fixed #593: Bug - Setup (update) is not working
	- Fixed #594: Defect - Awstats addon - cron task is not working
	- Fixed #595: Enhancement - Allow per item reconfiguration
	- Fixed #596: Bug - GUI - External mail server feature not implemented
	- Fixed #599: Bug - Ubuntu auto-installer adapter is broken
	- Fixed #603: Bug - Awstats Addon - cron task is sending messages to stdout
	- Fixed #604: Bug - insserv - Script imscp_network is broken: incomplete LSB comment
	- Fixed #607: Bug - History of customer stats is limited to 3 years
	- Fixed #609: Bug - PHP FPM - Internal Server Error after deleting any domain
	- Fixed #610: Cosmetics - i18n issue - Typo
	- Fixed #618: Defect - IMAP - Subscribed folders are not re-added to the subscription file
	- Fixed #619: Bug - HTTP Redirection - Null field - Update errors
	- Fixed #623: Bug - Error on update - Unable to delete etc/apt/preferences.d/imscp file
	- Fixed #624: Bug - Setup/Update imscp-autoinstall is broken
	- Fixed #625: Defect - Missing file themes/default/images/black/login/stripe.png
	- Fixed #629: Unable to change PHP editor settings when editing reseller
	- Fixed #634: Bug - i-MSCP update from git master - Error in bind9 server implementation
	- Fixed #639: Defect - Setup - Package 'debconf-utils' has no installation candidate
	- Fixed #643: Bug - Unable to switch from php-fpm to fastcgi
	- Fixed #649: Bug - imscp-uninstall syntax error
	- Fixed #650: Bug - Error when assigning an existing SQL User to a new database
	- Fixed #742: Bug - Welcome email don't show the correct information

-------------------------------------------------------------------------------------
i-MSCP 1.1.0-rc1.4
-------------------------------------------------------------------------------------

2013-01-07: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc1.4

DISTROS:
	- Added package files for Ubuntu Quantal Quetzal and Ubuntu Raring Ringtail

CONFIGS: